add svg to socialservices

--- a/components/bitrix/socserv.auth.split/main/style.css
+++ b/components/bitrix/socserv.auth.split/main/style.css
@@ -15,7 +15,7 @@ i.soc-serv-photo { width: 30px; height: 30px; display: inline-block; vertical-al
 i.soc-serv-text { font-style: normal; vertical-align: middle;}
 td.bx-ss-icons i.bx-ss-icon { width: 16px; height: 16px;  display: inline-block; vertical-align: middle; }
 .bx-ss-icon {background-image:url('/bitrix/js/socialservices/css/icons_v4.png'); width:16px; height:16px; background-repeat:no-repeat; }
-.openid {background-position: 0px -192px;}
+/*.openid {background-position: 0px -192px;}
 .yandex {background-position: 0px 0px;}
 .openid-mail-ru {background-position: 0px -48px;}
 .livejournal {background-position: 0px -16px;}
@@ -29,7 +29,7 @@ td.bx-ss-icons i.bx-ss-icon { width: 16px; height: 16px;  display: inline-block;
 .mymailru {background-position: 0px -64px;}
 .google {background-position: 0px -112px;}
 .odnoklassniki {background-position: 0px -208px;}
-.bitrix24 {background-position:0px -378px}
+.bitrix24 {background-position:0px -378px}*/
 
 .feed-add-post-form-but-wrap {padding:0 7px 2px; position:relative; display: none;}
 .feed-add-post-text {color:#bfbfbf; font-size:17px; display: none; /*height:75px; padding:10px 7px 0;*/}
